# flink-with-python

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
flink_with_python/: app.py
images/: video-demo.git
test_files/: test_messages.txt
